human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_19.wast
(assert_invalid
  (module (func $type-value-empty-vs-num (result i32)
    (loop (result i32))
  ))
  "type mismatch"
)